Git ignore and solve gradle issues